--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"scripts": {
 		"start": "yarn dev",
 		"dev": "NODE_ENV=development vuepress dev docs",
-		"build": "NODE_ENV=production BUILD_PATH=\"/\" vuepress build docs",
+		"build": "NODE_ENV=production vuepress build docs",
 		"lint": "eslint ."
 	},
 	"dependencies": {
